{
  "version": 4,
  "terraform_version": "1.0.5",
  "serial": 20,
  "lineage": "410ddabb-9b45-9c0c-a38c-54b95a6a65be",
  "resources": [
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:423754860743:internet-gateway/igw-08403a53f2e3cdf01",
            "id": "igw-08403a53f2e3cdf01",
            "owner_id": "423754860743",
            "tags": {
              "Name": "demo-project-production}",
              "environment": "production",
              "project_name": "demo-project",
              "team": "Cloud and Hosting"
            },
            "tags_all": {
              "Name": "demo-project-production}",
              "environment": "production",
              "project_name": "demo-project",
              "team": "Cloud and Hosting"
            },
            "vpc_id": "vpc-05253bc28c521a937"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-08403a53f2e3cdf01",
            "id": "r-rtb-0a06c1089e14490921080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0a06c1089e1449092",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:423754860743:route-table/rtb-0b042073303019437",
            "id": "rtb-0b042073303019437",
            "owner_id": "423754860743",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "demo-project-production}-private-eu-west-2a",
              "environment": "production",
              "project_name": "demo-project",
              "team": "Cloud and Hosting"
            },
            "tags_all": {
              "Name": "demo-project-production}-private-eu-west-2a",
              "environment": "production",
              "project_name": "demo-project",
              "team": "Cloud and Hosting"
            },
            "timeouts": null,
            "vpc_id": "vpc-05253bc28c521a937"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:423754860743:route-table/rtb-0e4a7473f11f83139",
            "id": "rtb-0e4a7473f11f83139",
            "owner_id": "423754860743",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "demo-project-production}-private-eu-west-2b",
              "environment": "production",
              "project_name": "demo-project",
              "team": "Cloud and Hosting"
            },
            "tags_all": {
              "Name": "demo-project-production}-private-eu-west-2b",
              "environment": "production",
              "project_name": "demo-project",
              "team": "Cloud and Hosting"
            },
            "timeouts": null,
            "vpc_id": "vpc-05253bc28c521a937"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:423754860743:route-table/rtb-0df3595341e6f77f0",
            "id": "rtb-0df3595341e6f77f0",
            "owner_id": "423754860743",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "demo-project-production}-private-eu-west-2c",
              "environment": "production",
              "project_name": "demo-project",
              "team": "Cloud and Hosting"
            },
            "tags_all": {
              "Name": "demo-project-production}-private-eu-west-2c",
              "environment": "production",
              "project_name": "demo-project",
              "team": "Cloud and Hosting"
            },
            "timeouts": null,
            "vpc_id": "vpc-05253bc28c521a937"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:423754860743:route-table/rtb-0a06c1089e1449092",
            "id": "rtb-0a06c1089e1449092",
            "owner_id": "423754860743",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "demo-project-production}-public",
              "environment": "production",
              "project_name": "demo-project",
              "team": "Cloud and Hosting"
            },
            "tags_all": {
              "Name": "demo-project-production}-public",
              "environment": "production",
              "project_name": "demo-project",
              "team": "Cloud and Hosting"
            },
            "timeouts": null,
            "vpc_id": "vpc-05253bc28c521a937"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0cdd214427870ce6a",
            "route_table_id": "rtb-0b042073303019437",
            "subnet_id": "subnet-0ca87c2121a8b0c59"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-091e1970de9593446",
            "route_table_id": "rtb-0e4a7473f11f83139",
            "subnet_id": "subnet-05c044c34a46fca71"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-040f2ab83ee0d22a1",
            "route_table_id": "rtb-0df3595341e6f77f0",
            "subnet_id": "subnet-06e0beff26038ac93"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03be9e56c4ae21ef0",
            "route_table_id": "rtb-0a06c1089e1449092",
            "subnet_id": "subnet-0300ffe46c2d80873"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e03fdfbd9cc36d3d",
            "route_table_id": "rtb-0a06c1089e1449092",
            "subnet_id": "subnet-0d82c64a1455baeb7"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a3364d59c2f9c857",
            "route_table_id": "rtb-0a06c1089e1449092",
            "subnet_id": "subnet-0c91a3d944e9a75eb"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:423754860743:subnet/subnet-0ca87c2121a8b0c59",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2a",
            "availability_zone_id": "euw2-az2",
            "cidr_block": "10.2.5.0/24",
            "id": "subnet-0ca87c2121a8b0c59",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "423754860743",
            "tags": {
              "Name": "demo-project-production}-private-eu-west-2a",
              "environment": "production",
              "project_name": "demo-project",
              "team": "Cloud and Hosting"
            },
            "tags_all": {
              "Name": "demo-project-production}-private-eu-west-2a",
              "environment": "production",
              "project_name": "demo-project",
              "team": "Cloud and Hosting"
            },
            "vpc_id": "vpc-05253bc28c521a937"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:423754860743:subnet/subnet-05c044c34a46fca71",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2b",
            "availability_zone_id": "euw2-az3",
            "cidr_block": "10.2.4.0/24",
            "id": "subnet-05c044c34a46fca71",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "423754860743",
            "tags": {
              "Name": "demo-project-production}-private-eu-west-2b",
              "environment": "production",
              "project_name": "demo-project",
              "team": "Cloud and Hosting"
            },
            "tags_all": {
              "Name": "demo-project-production}-private-eu-west-2b",
              "environment": "production",
              "project_name": "demo-project",
              "team": "Cloud and Hosting"
            },
            "vpc_id": "vpc-05253bc28c521a937"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:423754860743:subnet/subnet-06e0beff26038ac93",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2c",
            "availability_zone_id": "euw2-az1",
            "cidr_block": "10.2.6.0/24",
            "id": "subnet-06e0beff26038ac93",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "423754860743",
            "tags": {
              "Name": "demo-project-production}-private-eu-west-2c",
              "environment": "production",
              "project_name": "demo-project",
              "team": "Cloud and Hosting"
            },
            "tags_all": {
              "Name": "demo-project-production}-private-eu-west-2c",
              "environment": "production",
              "project_name": "demo-project",
              "team": "Cloud and Hosting"
            },
            "vpc_id": "vpc-05253bc28c521a937"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:423754860743:subnet/subnet-0300ffe46c2d80873",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2a",
            "availability_zone_id": "euw2-az2",
            "cidr_block": "10.2.1.0/24",
            "id": "subnet-0300ffe46c2d80873",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "423754860743",
            "tags": {
              "Name": "demo-project-production}-public-eu-west-2a",
              "environment": "production",
              "project_name": "demo-project",
              "team": "Cloud and Hosting"
            },
            "tags_all": {
              "Name": "demo-project-production}-public-eu-west-2a",
              "environment": "production",
              "project_name": "demo-project",
              "team": "Cloud and Hosting"
            },
            "vpc_id": "vpc-05253bc28c521a937"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:423754860743:subnet/subnet-0d82c64a1455baeb7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2b",
            "availability_zone_id": "euw2-az3",
            "cidr_block": "10.2.2.0/24",
            "id": "subnet-0d82c64a1455baeb7",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "423754860743",
            "tags": {
              "Name": "demo-project-production}-public-eu-west-2b",
              "environment": "production",
              "project_name": "demo-project",
              "team": "Cloud and Hosting"
            },
            "tags_all": {
              "Name": "demo-project-production}-public-eu-west-2b",
              "environment": "production",
              "project_name": "demo-project",
              "team": "Cloud and Hosting"
            },
            "vpc_id": "vpc-05253bc28c521a937"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:423754860743:subnet/subnet-0c91a3d944e9a75eb",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2c",
            "availability_zone_id": "euw2-az1",
            "cidr_block": "10.2.3.0/24",
            "id": "subnet-0c91a3d944e9a75eb",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "423754860743",
            "tags": {
              "Name": "demo-project-production}-public-eu-west-2c",
              "environment": "production",
              "project_name": "demo-project",
              "team": "Cloud and Hosting"
            },
            "tags_all": {
              "Name": "demo-project-production}-public-eu-west-2c",
              "environment": "production",
              "project_name": "demo-project",
              "team": "Cloud and Hosting"
            },
            "vpc_id": "vpc-05253bc28c521a937"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:423754860743:vpc/vpc-05253bc28c521a937",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.2.0.0/16",
            "default_network_acl_id": "acl-00adb511acbec214f",
            "default_route_table_id": "rtb-0d9cee582debc826d",
            "default_security_group_id": "sg-03960c16e832eb13f",
            "dhcp_options_id": "dopt-c6aca8ae",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-05253bc28c521a937",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0d9cee582debc826d",
            "owner_id": "423754860743",
            "tags": {
              "Name": "demo-project-production}",
              "environment": "production",
              "project_name": "demo-project",
              "team": "Cloud and Hosting"
            },
            "tags_all": {
              "Name": "demo-project-production}",
              "environment": "production",
              "project_name": "demo-project",
              "team": "Cloud and Hosting"
            }
          }
        }
      ]
    }
  ]
}